add services page

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <ul class="main-nav">
                         <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
                         <li><a class="nav-item--active" href="./portfolio.html">Портфолио</a></li>
-                        <li><a class="nav-item" href="#">Услуги</a></li>
+                        <li><a class="nav-item" href="./services.html">Услуги</a></li>
                         <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
                         <li><a class="nav-item" href="#">Выступления</a></li>
                         <li><a class="nav-item" href="#">Блог</a></li>
@@ -48,7 +48,7 @@
                         <ul>
                             <li><a href="./index.html">ГЛАВНАЯ</a></li>
                             <li><a class="nav-active" href="./portfolio.html">Портфолио</a></li>
-                            <li><a href="#">Услуги</a></li>
+                            <li><a href="./services.html">Услуги</a></li>
                             <li><a href="./cases.html">Кейсы</a></li>
                             <li><a href="#">Выступления</a></li>
                             <li><a href="#">Блог</a></li>
@@ -102,50 +102,50 @@
             <div class="portfolio__body">
                 <div class="portfolio__block">
                     <div class="portfolio__image">
-                        <a href="#"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
                     </div>
                     <div class="image__description">
-                        <a href="#">Подготовка методичек для Webinar Group</a>
+                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
                     </div>
                 </div>
                 <div class="portfolio__block">
                     <div class="portfolio__image">
-                        <a href="#"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
                     </div>
                     <div class="image__description">
-                        <a href="#">Статья для агентства Альтопромо</a>
+                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
                     </div>
                 </div>
                 <div class="portfolio__block">
                     <div class="portfolio__image">
-                        <a href="#"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
                     </div>
                     <div class="image__description">
-                        <a href="#">Статья для блога Академии MAED</a>
+                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
                     </div>
                 </div>
                 <div class="portfolio__block">
                     <div class="portfolio__image">
-                        <a href="#"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
                     </div>
                     <div class="image__description">
-                        <a href="#">Подготовка методичек для Webinar Group</a>
+                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
                     </div>
                 </div>
                 <div class="portfolio__block">
                     <div class="portfolio__image">
-                        <a href="#"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
                     </div>
                     <div class="image__description">
-                        <a href="#">Статья для агентства Альтопромо</a>
+                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
                     </div>
                 </div>
                 <div class="portfolio__block">
                     <div class="portfolio__image">
-                        <a href="#"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
                     </div>
                     <div class="image__description">
-                        <a href="#">Статья для блога Академии MAED</a>
+                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
                     </div>
                 </div>
             </div>
