--- a/services.html
+++ b/services.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,18 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
     <script src="./js/script.js"></script>
-    <title>Главная</title>
+    <title>Услуги</title>
 </head>
-
 <body>
     <div class="row header">
         <div class="menu__mobile" style="display: none;">
             <div class="menu__left">
                 <nav>
                     <ul class="main-nav">
-                        <li><a class="nav-item--active" href="./index.html">ГЛАВНАЯ</a></li>
+                        <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
                         <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
-                        <li><a class="nav-item" href="./services.html">Услуги</a></li>
+                        <li><a class="nav-item--active" href="./services.html">Услуги</a></li>
                         <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
                         <li><a class="nav-item" href="#">Выступления</a></li>
                         <li><a class="nav-item" href="#">Блог</a></li>
@@ -46,9 +44,9 @@
                     </div>
                     <nav class="nav__desktop">
                         <ul>
-                            <li><a class="nav-active" href="./index.html">ГЛАВНАЯ</a></li>
+                            <li><a href="./index.html">ГЛАВНАЯ</a></li>
                             <li><a href="./portfolio.html">Портфолио</a></li>
-                            <li><a href="./cases.html">Услуги</a></li>
+                            <li><a class="nav-active" href="./services.html">Услуги</a></li>
                             <li><a href="./cases.html">Кейсы</a></li>
                             <li><a href="#">Выступления</a></li>
                             <li><a href="#">Блог</a></li>
@@ -56,7 +54,8 @@
                     </nav>
                 </div>
                 <div class="contacts__img">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44" height="44"></a>
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" width="44"
+                            height="44"></a>
                     <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="44" height="44"></a>
                     <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="44" height="44"></a>
                     <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="44" height="44"></a>
@@ -70,64 +69,35 @@
         </div>
     </div>
 
-    <div class="row row__hero">
-        <div class="background"></div>
+    <div class="row">
         <div class="container">
-            <div class="hero">
-                <div class="hero__about">
-                    <div class="hero__block">
-                        <div class="hero__img">
-                            <img src="./img/hero.jpg" width="120" height="120">
-                        </div>
-                        <h1 class="hero__name">
-                            Денис<br>
-                            Давыдов
-                        </h1>
-                        <h1 class="hero__name__mobile">
-                            Денис Давыдов
-                        </h1>
-                        <div class="hero__info">
-                            Редактор, контент-маркетолог<br>
-                            <br>
-                            Живу в Воронеже, работаю удаленно<br>
-                            со всей страной как самозанятый
-                        </div>
-                        <div class="hero__info__mobile">
-                            Редактор, контент-маркетолог<br>
-                            <br>
-                            Живу в Воронеже, работаю<br>
-                            удаленно со всей страной как<br>
-                            самозанятый
-                        </div>
-                    </div>
-                    <div class="hero__cursor">
-                        <div class="cursor__text">
-                            посмотрите<br>
-                            видео обо мне
-                        </div>
-                        <div class="cursor">
-                            <img src="./img/cursor.svg">
-                        </div>
-                    </div>
+            <div class="portfolio__title">
+                <h1 class="portfolio">
+                    Услуги
+                </h1>
+                <div class="title__description">
+                    На этой странице собраны мини-кейсы.<br>
+                    Это небольшие разовые задачи, которые я решал.<br>
+                    По ним можно посмотреть, как я пишу статьи, беру<br>
+                    интервью или делаю посадочные страницы.
                 </div>
-                <div class="hero__video__block">
-                    <img class="hero__video" src="./img/video.svg" width="1160" height="502">
-                    <img class="hero__video__mobile" src="./img/video_mobile.svg" width="340" height="420">
-                    <a href="https://youtu.be/HLYsRavNTwM"><img class="video__play" src="./img/play.svg" width="47"
-                            height="47"></a>
+                <div class="title__description__mobile">
+                    На этой странице собраны<br>
+                    мини-кейсы.<br>
+                    Это небольшие разовые<br>
+                    задачи, которые я решал.<br>
+                    По ним можно посмотреть, как<br>
+                    я пишу статьи, беру интервью<br>
+                    или делаю посадочные<br>
+                    страницы.
                 </div>
             </div>
         </div>
     </div>
 
 
-    <div class="row row-alternative-color">
+    <div class="row">
         <div class="container">
-            <h1 class="title">Что я делал и делаю</h1>
-            <h1 class="title__mobile">
-                Что я делал<br>
-                и делаю
-            </h1>
             <div class="activity">
                 <div class="activity__block">
                     <img src="./img/process.png" width="360" height="360">
@@ -283,12 +253,13 @@
         </div>
     </div>
 
-    <div class="row">
+     <div class="row">
         <div class="container">
             <div class="contacts">
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__links">
-                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68" height="68"></a>
+                    <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="68"
+                            height="68"></a>
                     <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="68" height="68"></a>
                     <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="68" height="68"></a>
                     <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="68" height="68"></a>
@@ -299,7 +270,8 @@
                 <h1 class="title__contacts">Контакты</h1>
                 <div class="contacts__block">
                     <div class="contacts__links">
-                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube" width="50" height="50"></a>
+                        <a href="https://www.youtube.com/@FreudMethod"><img src="./img/youtube.svg" alt="YouTube"
+                                width="50" height="50"></a>
                         <a href="https://t.me/freud_cat"><img src="./img/telegram.svg" width="50" height="50"></a>
                         <a href="https://www.facebook.com/freud.cat"><img src="./img/f.svg" width="50" height="50"></a>
                         <a href="https://tenchat.ru/freud-cat"><img src="./img/t.svg" width="50" height="50"></a>
@@ -317,5 +289,4 @@
         </div>
     </div>
 </body>
-
 </html>
