--- a/cases-article.html
+++ b/cases-article.html
@@ -20,7 +20,7 @@
                     <ul class="main-nav">
                         <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
                         <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
-                        <li><a class="nav-item" href="#">Услуги</a></li>
+                        <li><a class="nav-item" href="./services.html">Услуги</a></li>
                         <li><a class="nav-item--active" href="./cases.html">Кейсы</a></li>
                         <li><a class="nav-item" href="#">Выступления</a></li>
                         <li><a class="nav-item" href="#">Блог</a></li>
@@ -48,7 +48,7 @@
                         <ul>
                             <li><a href="./index.html">ГЛАВНАЯ</a></li>
                             <li><a href="./portfolio.html">Портфолио</a></li>
-                            <li><a href="#">Услуги</a></li>
+                            <li><a href="./services.html">Услуги</a></li>
                             <li><a class="nav-active" href="./cases.html">Кейсы</a></li>
                             <li><a href="#">Выступления</a></li>
                             <li><a href="#">Блог</a></li>
