add speeches block

--- a/speeches-article.html
+++ b/speeches-article.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
     <script src="./js/script.js"></script>
-    <title>Кейсы</title>
+    <title>Выступление</title>
 </head>
 
 <body>
@@ -21,8 +21,8 @@
                         <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
                         <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
                         <li><a class="nav-item" href="./services.html">Услуги</a></li>
-                        <li><a class="nav-item--active" href="./cases.html">Кейсы</a></li>
-                        <li><a class="nav-item" href="./speeches.html">Выступления</a></li>
+                        <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
+                        <li><a class="nav-item--active" href="./speeches.html">Выступления</a></li>
                         <li><a class="nav-item" href="./blog.html">Блог</a></li>
                     </ul>
                 </nav>
@@ -49,8 +49,8 @@
                             <li><a href="./index.html">ГЛАВНАЯ</a></li>
                             <li><a href="./portfolio.html">Портфолио</a></li>
                             <li><a href="./services.html">Услуги</a></li>
-                            <li><a class="nav-active" href="./cases.html">Кейсы</a></li>
-                            <li><a href="./speeches.html">Выступления</a></li>
+                            <li><a href="./cases.html">Кейсы</a></li>
+                            <li><a class="nav-active" href="./speeches.html">Выступления</a></li>
                             <li><a href="./blog.html">Блог</a></li>
                         </ul>
                     </nav>
@@ -73,80 +73,24 @@
 
     <div class="row">
         <div class="container">
-            <div class="portfolio__title">
-                <h1 class="portfolio">
-                    Кейсы
-                </h1>
-                <div class="title__description">
-                    На этой странице собраны мини-кейсы.<br>
-                    Это небольшие разовые задачи, которые я решал.<br>
-                    По ним можно посмотреть, как я пишу статьи, беру<br>
-                    интервью или делаю посадочные страницы.
+            <div class="speeches__text__article">
+                <div class="speeches__link__block">
+                    <a class="recall__link__speeches" href="./speeches.html">← Назад к выступлениям</a>
                 </div>
-                <div class="title__description__mobile">
-                    На этой странице собраны<br>
-                    мини-кейсы.<br>
-                    Это небольшие разовые<br>
-                    задачи, которые я решал.<br>
-                    По ним можно посмотреть, как<br>
-                    я пишу статьи, беру интервью<br>
-                    или делаю посадочные<br>
-                    страницы.
+                <div class="speeches__article__title">
+                    Выступление на конференции в Москве
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-alternative-color">
-        <div class="container">
-            <div class="portfolio__body">
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
-                    </div>
+                <div class="speeches__image__block">
+                    <img class="speeches__hero" src="./img/speeches-hero.svg" width="1160" height="620">
+                    <img class="speeches__hero__mobile" src="./img/speeches-hero-mobile.svg" width="340" height="420">
+                    <a href="https://www.youtube.com/@FreudMethod/videos">
+                        <img class="speeches__play__article"src="./img/play.svg" width="47" height="47">
+                    </a>
                 </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
-                    </div>
+                <div class="speeches__text__title">
+                    На этой странице собраны мини-кейсы. Это небольшие разовые
+                    задачи, которые я решал. По ним можно посмотреть, как я пишу
+                    статьи, беру интервью или делаю посадочные страницы.
                 </div>
             </div>
         </div>
