--- a/speeches.html
+++ b/speeches.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap" rel="stylesheet">
     <script src="./js/script.js"></script>
-    <title>Кейсы</title>
+    <title>Выступления</title>
 </head>
-
 <body>
     <div class="row header">
         <div class="menu__mobile" style="display: none;">
@@ -21,8 +19,8 @@
                         <li><a class="nav-item" href="./index.html">ГЛАВНАЯ</a></li>
                         <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
                         <li><a class="nav-item" href="./services.html">Услуги</a></li>
-                        <li><a class="nav-item--active" href="./cases.html">Кейсы</a></li>
-                        <li><a class="nav-item" href="./speeches.html">Выступления</a></li>
+                        <li><a class="nav-item" href="./cases.html">Кейсы</a></li>
+                        <li><a class="nav-item--active" href="./speeches.html">Выступления</a></li>
                         <li><a class="nav-item" href="./blog.html">Блог</a></li>
                     </ul>
                 </nav>
@@ -49,8 +47,8 @@
                             <li><a href="./index.html">ГЛАВНАЯ</a></li>
                             <li><a href="./portfolio.html">Портфолио</a></li>
                             <li><a href="./services.html">Услуги</a></li>
-                            <li><a class="nav-active" href="./cases.html">Кейсы</a></li>
-                            <li><a href="./speeches.html">Выступления</a></li>
+                            <li><a href="./cases.html">Кейсы</a></li>
+                            <li><a class="nav-active" href="./speeches.html">Выступления</a></li>
                             <li><a href="./blog.html">Блог</a></li>
                         </ul>
                     </nav>
@@ -75,7 +73,7 @@
         <div class="container">
             <div class="portfolio__title">
                 <h1 class="portfolio">
-                    Кейсы
+                    Выступления
                 </h1>
                 <div class="title__description">
                     На этой странице собраны мини-кейсы.<br>
@@ -99,54 +97,81 @@
 
     <div class="row row-alternative-color">
         <div class="container">
-            <div class="portfolio__body">
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
+            <div class="speeches__body">
+                <div class="speeches__block">
+                    <div class="speeches__image">
+                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
+                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
+                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
                     </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                        Подготовка методичек<br> 
+                        для Webinar Group
+                        </a>
                     </div>
                 </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
+                <div class="speeches__block">
+                    <div class="speeches__image">
+                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
+                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
+                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
                     </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                        Подготовка методичек<br> 
+                        для Webinar Group
+                        </a>
+                    </div>
+                </div><div class="speeches__block">
+                    <div class="speeches__image">
+                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
+                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
+                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                        Подготовка методичек<br> 
+                        для Webinar Group
+                        </a>
+                    </div>
+                </div><div class="speeches__block">
+                    <div class="speeches__image">
+                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
+                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
+                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                        Подготовка методичек<br> 
+                        для Webinar Group
+                        </a>
+                    </div>
+                </div><div class="speeches__block">
+                    <div class="speeches__image">
+                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
+                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
+                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                        Подготовка методичек<br> 
+                        для Webinar Group
+                        </a>
+                    </div>
+                </div><div class="speeches__block">
+                    <div class="speeches__image">
+                        <img class="speeches__iamge__desktop" src="./img/hero-speeches.svg" width="360" height="260">
+                        <img class="speeches__iamge__mobile" src="./img/speeches-mobile.svg" width="340" height="200">
+                        <a href="./speeches-article.html"><img class="speeches__play" src="./img/play.svg" width="47" height="47"></a>
+                    </div>
+                    <div class="speeches__text">
+                        <a class="speeches__link" href="./speeches-article.html">
+                        Подготовка методичек<br> 
+                        для Webinar Group
+                        </a>
                     </div>
                 </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio1.jpg" width="304" height="169"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Подготовка методичек для Webinar Group</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio2.jpg" width="272" height="259"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для агентства Альтопромо</a>
-                    </div>
-                </div>
-                <div class="portfolio__block">
-                    <div class="portfolio__image">
-                        <a href="./cases-article.html"><img src="./img/portfolio3.jpg" width="292" height="167"></a>
-                    </div>
-                    <div class="image__description">
-                        <a href="./cases-article.html">Статья для блога Академии MAED</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -188,5 +213,4 @@
         </div>
     </div>
 </body>
-
 </html>
