--- a/cases-article.html
+++ b/cases-article.html
@@ -22,8 +22,8 @@
                         <li><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
                         <li><a class="nav-item" href="./services.html">Услуги</a></li>
                         <li><a class="nav-item--active" href="./cases.html">Кейсы</a></li>
-                        <li><a class="nav-item" href="#">Выступления</a></li>
-                        <li><a class="nav-item" href="#">Блог</a></li>
+                        <li><a class="nav-item" href="./speeches.html">Выступления</a></li>
+                        <li><a class="nav-item" href="./blog.html">Блог</a></li>
                     </ul>
                 </nav>
             </div>
@@ -50,8 +50,8 @@
                             <li><a href="./portfolio.html">Портфолио</a></li>
                             <li><a href="./services.html">Услуги</a></li>
                             <li><a class="nav-active" href="./cases.html">Кейсы</a></li>
-                            <li><a href="#">Выступления</a></li>
-                            <li><a href="#">Блог</a></li>
+                            <li><a href="./speeches.html">Выступления</a></li>
+                            <li><a href="./blog.html">Блог</a></li>
                         </ul>
                     </nav>
                 </div>
