--- a/blog.html
+++ b/blog.html
@@ -69,8 +69,110 @@
         </div>
     </div>
 
-    <div class="">
-
+    <div class="row">
+        <div class="container">
+            <div class="blog__title">
+                Блог
+            </div>
+            <div class="blog__body">
+                <div class="blog__container">
+                    <div class="blog__image">
+                        <img class="blog__image__desktop" src="./img/blogblock.png" width="526" height="257">
+                        <img class="blog__image__mobile" src="./img/blogblock-mobile.png" width="340" height="200">
+                    </div>
+                    <div class="blog__text__block">
+                        <div class="blog__text__title">
+                            Подготовка методичек<br> 
+                            для Webinar Group
+                        </div>
+                        <div class="blog__text">
+                            На этой странице собраны мини-кейсы.<br> 
+                            Это небольшие разовые задачи, которые я решал.
+                        </div>
+                        <div class="blog__text__mobile">
+                            На этой странице собраны мини-<br>
+                            кейсы. Это небольшие разовые<br> 
+                            задачи, которые я решал.
+                        </div>
+                        <div class="blog__button">
+                            <button><a href="#">Читать</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__container">
+                    <div class="blog__image">
+                        <img class="blog__image__desktop" src="./img/blogblock.png" width="526" height="257">
+                        <img class="blog__image__mobile" src="./img/blogblock-mobile.png" width="340" height="200">
+                    </div>
+                    <div class="blog__text__block">
+                        <div class="blog__text__title">
+                            Подготовка методичек<br> 
+                            для Webinar Group
+                        </div>
+                        <div class="blog__text">
+                            На этой странице собраны мини-кейсы.<br> 
+                            Это небольшие разовые задачи, которые я решал.
+                        </div>
+                        <div class="blog__text__mobile">
+                            На этой странице собраны мини-<br>
+                            кейсы. Это небольшие разовые<br> 
+                            задачи, которые я решал.
+                        </div>
+                        <div class="blog__button">
+                            <button><a href="#">Читать</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__container">
+                    <div class="blog__image">
+                        <img class="blog__image__desktop" src="./img/blogblock.png" width="526" height="257">
+                        <img class="blog__image__mobile" src="./img/blogblock-mobile.png" width="340" height="200">
+                    </div>
+                    <div class="blog__text__block">
+                        <div class="blog__text__title">
+                            Подготовка методичек<br> 
+                            для Webinar Group
+                        </div>
+                        <div class="blog__text">
+                            На этой странице собраны мини-кейсы.<br> 
+                            Это небольшие разовые задачи, которые я решал.
+                        </div>
+                        <div class="blog__text__mobile">
+                            На этой странице собраны мини-<br>
+                            кейсы. Это небольшие разовые<br> 
+                            задачи, которые я решал.
+                        </div>
+                        <div class="blog__button">
+                            <button><a href="#">Читать</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog__container">
+                    <div class="blog__image">
+                        <img class="blog__image__desktop" src="./img/blogblock.png" width="526" height="257">
+                        <img class="blog__image__mobile" src="./img/blogblock-mobile.png" width="340" height="200">
+                    </div>
+                    <div class="blog__text__block">
+                        <div class="blog__text__title">
+                            Подготовка методичек<br> 
+                            для Webinar Group
+                        </div>
+                        <div class="blog__text">
+                            На этой странице собраны мини-кейсы.<br> 
+                            Это небольшие разовые задачи, которые я решал.
+                        </div>
+                        <div class="blog__text__mobile">
+                            На этой странице собраны мини-<br>
+                            кейсы. Это небольшие разовые<br> 
+                            задачи, которые я решал.
+                        </div>
+                        <div class="blog__button">
+                            <button><a href="#">Читать</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="row">
